--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 **/application.yml
-**/firebase/
+**/resources/firebase/
 
 ### STS ###
 .apt_generated
