refactor: CI/CD 파일에 nginx restart 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,3 +30,4 @@ jobs:
             ./gradlew clean build
             sudo fuser -k -n tcp 80 || true
             sudo nohup java -jar build/libs/*SNAPSHOT.jar > ./output.log 2>&1 &
+            sudo service nginx restart
