--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ dependencies {
 
 	// Jackson Data Bind
 	implementation 'com.fasterxml.jackson.core:jackson-core:2.16.1'
+
+	// bad word filtering
+	implementation 'io.github.vaneproject:badwordfiltering:1.0.0'
 }
 
 tasks.named('test') {
