--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,24 +9,48 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: SSH로 EC2에 접속하기
-        uses: appleboy/ssh-action@v1.0.3
-        env:
-          APPLICATION_PROPERTIES: ${{ secrets.APPLICATION_PROPERTIES }}
-          FIREBASE_KEY: ${{ secrets.FIREBASE_KEY }}
+      - name: Github Repository 파일 불러오기
+        uses: actions/checkout@v4
+
+      - name: JDK 17버전 설치
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version:
+
+      - name: application.yml 파일 생성
+        run: echo "${{ secrets.APPLICATION_PROPERTIES }}" > ./src/main/resources/application.yml
+
+      - name: firebase_service_key.json 파일 생성
+        run: echo "${{ secrets.FIREBASE_KEY }}" > ./src/main/resources/firebase/firebase_service_key.json
+
+      - name: 테스트 및 빌드하기
+        run: ./gradlew clean build
+
+      - name: 빌드된 파일 이름 변경하기
+        run: mv ./build/libs/*SNAPSHOT.jar ./project.jar
+
+      - name: SCP로 EC2에 빌드된 파일 전송하기
+        uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
-          envs: APPLICATION_PROPERTIES, FIREBASE_KEY
+          source: project.jar
+          target: /home/ubuntu/toyou-server/tobe
+
+      - name: SSH로 EC2에 접속하기
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_PRIVATE_KEY }}
           script_stop: true
           script: |
-            cd /home/ubuntu/ToYou-Server
-            rm -rf src/main/resources/application.yml
-            rm -rf src/main/resources/firebase/firebase_service_key.json
-            git pull origin main
-            echo "$APPLICATION_PROPERTIES" > src/main/resources/application.yml
-            echo "$FIREBASE_KEY" > src/main/resources/firebase/firebase_service_key.json
-            ./gradlew clean build
+            rm -rf /home/ubuntu/toyou-server/current
+            mkdir /home/ubuntu/toyou-server/current
+            mv /home/ubuntu/toyou-server/tobe/project.jar /home/ubuntu/toyou-server/current/project.jar
+            cd /home/ubuntu/toyou-server/current
             sudo fuser -k -n tcp 8080 || true
-            sudo nohup java -jar build/libs/*SNAPSHOT.jar > ./output.log 2>&1 &
+            sudo nohup java -jar project.jar > ./output.log 2>&1 & 
+            rm -rf /home/ubuntu/toyou-server/tobe
