--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,12 @@ dependencies {
 
 	// bad word filtering
 	implementation 'io.github.vaneproject:badwordfiltering:1.0.0'
+
+	// for apple login
+	implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.30.1'
+	implementation group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.70'
+	implementation 'org.springframework.security:spring-security-oauth2-jose:5.7.3'
+	implementation 'com.auth0:java-jwt:3.18.2'
 }
 
 tasks.named('test') {
