--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,10 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      - name: resources, firebase 디렉터리 생성
+      - name: resources, firebase, key 디렉터리 생성
         run: |
           mkdir -p ./src/main/resources/firebase/
+          mkdir -p ./src/main/resources/key/
 
       - name: application.yml 파일 생성
         run: echo "${{ secrets.APPLICATION_PROPERTIES }}" > ./src/main/resources/application.yml
@@ -30,6 +31,9 @@ jobs:
 
       - name: firebase_service_key.json 파일 생성
         run: echo "${{ secrets.FIREBASE_KEY }}" | openssl base64 -d -A > ./src/main/resources/firebase/firebase_service_key.json
+
+      - name: apple_auth_key.p8 파일 생성
+        run: echo "${{ secrets.APPLE_AUTH_KEY }}" | openssl base64 -d -A > ./src/main/resources/key/apple_auth_key.p8
 
       - name: 테스트 및 빌드하기
         run: ./gradlew clean build
