--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
         run: echo "${{ secrets.FIREBASE_KEY }}" | openssl base64 -d -A > ./src/main/resources/firebase/firebase_service_key.json
 
       - name: apple_auth_key.p8 파일 생성
-        run: echo "${{ secrets.APPLE_AUTH_KEY }}" | openssl base64 -d -A > ./src/main/resources/key/apple_auth_key.p8
+        run: echo "${{ secrets.APPLE_AUTH_KEY }}" > ./src/main/resources/key/apple_auth_key.p8
 
       - name: 테스트 및 빌드하기
         run: ./gradlew clean build
