feat: k6 script 작성

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ build/
 **/application-test.yml
 **/resources/firebase/
 **/resources/key/
+http-client.private.env.json
 
 ### STS ###
 .apt_generated
