--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ build/
 **/resources/firebase/
 **/resources/key/
 http-client.private.env.json
-.k6-scripts
+**/k6-scripts/
 **/DataInitializer.java
 
 ### STS ###
