--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,5 +63,5 @@ jobs:
             mv /home/ubuntu/toyou-server/tobe/project.jar /home/ubuntu/toyou-server/current/project.jar
             cd /home/ubuntu/toyou-server/current
             sudo fuser -k -n tcp 8080 || true
-            sudo nohup java -jar project.jar > ./output.log 2>&1 & 
+            sudo nohup java -Xms256m -Xmx512m -jar project.jar > ./output.log 2>&1 &
             rm -rf /home/ubuntu/toyou-server/tobe
